# NormAI

./: .gitignore  LICENSE  README.md
server/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml
server/data/: base_maus_tratos_subset.xlsx  script.py
server/docs/: AIClassification.md  AIClassificationDebug.md  CRUD.md  REQUISITOS.md  activitiesCRUD.md  auth-user-crud.md  dictionaryIntegration.md
server/docs/changelogs/: CrudColumnConfigsChangelog.md  CrudDictionaryChangelog.md  CrudProcessingQueueChangelog.md  CrudProjectsChangelog.md  CrudReportsChangelog.md
server/docs/skills/: backend_resume.md  endpoints.md  endpointsProjects.md
server/migrations/: env.py
server/migrations/versions/: 4ab000c8f736_add_users_auth_and_projects_tables.py  4df85356b0f8_add_reports_and_executions_tables.py  4ec107f5c802_add_dictionary_entries_table.py  77c0b67bce82_add_column_configs_table.py  7e6f0580b03a_add_users_auth_and_projects_tables.py  a1b2c3d4e5f6_update_dictionary_for_frontend_integration.py  b7419e8b9755_.py  b7e3f1a2d9c5_add_avatar_url_to_users.py  b7e93f1c2a05_add_classification_metrics_to_executions.py  c3a9f2b1d8e4_add_name_lastname_to_users.py  c89ed0b4ddd0_create_activities_table.py
server/scripts/: e2e_curl.sh  e2e_debug.sh  smoke_classify.py  smoke_classify_big.py
server/scripts/localstack/: init-s3.sh
server/src/: main.py
server/src/domain/: __init__.py
server/src/infrastructure/: __init__.py  settings.py
server/tests/: conftest.py  test_health.py
web/: .dockerignore  (+7 more)
(+293 files in other folders)
