[project]
name = "normalizador-jusbrasil"
version = "0.1.0"
description = "API para normalizacao e classificacao de relatorios juridicos."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pwdlib[argon2]>=0.2.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "pydantic[email]>=2.9.0,<3.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "aioboto3>=13.0,<14.0",
    "openpyxl>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0.0",
    "openai>=1.50.0,<2.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
